<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <fragment
        android:id="@+id/navDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.kudos.navigationFragment"
        >

    </fragment>

    <ImageView
        android:layout_width="201dp"
        android:layout_height="176dp"
        android:background="@drawable/swoosh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="18sp"
        android:text="@string/slogan"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/username"
        android:layout_width="127dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:height="100dp"
        android:drawableLeft="@drawable/baseline_account_circle_black_18dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:height="70dp"
        android:drawableLeft="@drawable/baseline_lock_black_18dp"
        android:hint="@string/password"

        />
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:height="70dp"
        android:drawableLeft="@drawable/baseline_lock_black_18dp"
        android:hint="@string/c_password"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:layout_marginLeft="120dp"
            />

        <Button
            android:id="@+id/goto_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/go_to_login" />


    </LinearLayout>



</LinearLayout>